--- a/app/src/main/res/layout/account_side_item.xml
+++ b/app/src/main/res/layout/account_side_item.xml
@@ -153,11 +153,16 @@ android:background="@drawable/shape_underline_dashed">
     <LinearLayout
         android:visibility="gone"
         android:id="@+id/linearLayout_account_side_extra_information"
-        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_weight="4"
         android:layout_height="wrap_content">
 
-<LinearLayout
+        <LinearLayout
     android:layout_marginTop="@dimen/padding_large"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -201,7 +206,7 @@ android:background="@drawable/shape_underline_dashed">
 
 </LinearLayout>
 
-<LinearLayout
+        <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -227,6 +232,45 @@ android:background="@drawable/shape_underline_dashed">
 
 </LinearLayout>
 
+    </LinearLayout>
+        <LinearLayout
+            android:layout_marginBottom="@dimen/padding_large"
+            android:layout_marginLeft="@dimen/padding_large"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/textView_acount_side_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ویرایش"
+                android:gravity="center"
+                android:background="@drawable/shape_circle"
+                android:paddingRight="@dimen/padding_spinner"
+                android:paddingTop="@dimen/padding_bit"
+                android:paddingBottom="@dimen/padding_bit"
+                android:paddingLeft="@dimen/padding_spinner"
+                android:textColor="@color/icons"
+                android:layout_marginBottom="@dimen/padding_medium"
+                android:backgroundTint="@color/primary_dark"
+                android:textSize="@dimen/font_small"/>
+
+            <TextView
+                android:id="@+id/textView_acount_side_delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="حذف"
+                android:gravity="center"
+                android:background="@drawable/shape_circle"
+                android:paddingRight="@dimen/padding_spinner"
+                android:paddingTop="@dimen/padding_bit"
+                android:paddingBottom="@dimen/padding_bit"
+                android:paddingLeft="@dimen/padding_spinner"
+                android:textColor="@color/icons"
+                android:backgroundTint="@color/red"
+                android:textSize="@dimen/font_small"/>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
