--- a/app/src/main/res/layout/nav_layout.xml
+++ b/app/src/main/res/layout/nav_layout.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:gravity="center"
+    android:gravity="right"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/padding_large">
+    android:paddingTop="@dimen/padding_xlarge"
+    android:paddingBottom="@dimen/padding_xlarge"
+    android:paddingRight="@dimen/padding_box"
+    android:background="@drawable/shape_underline"
+    android:backgroundTint="@color/icons">
 
     <TextView
         android:id="@+id/nav_textView"
-        android:gravity="center"
-        android:textColor="@color/primary_text"
+        android:gravity="right"
+        android:textColor="@color/icons"
+        android:textSize="@dimen/font_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
