--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -1,6 +1,6 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:padding="@dimen/padding_small"
+    android:padding="@dimen/padding_medium"
     android:maxLines="1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
