--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="padding_small">5dp</dimen>
     <dimen name="padding_medium">8dp</dimen>
     <dimen name="padding_large">10dp</dimen>
+    <dimen name="padding_xlarge">15dp</dimen>
     <dimen name="padding_spinner">20dp</dimen>
     <dimen name="padding_box">40dp</dimen>
 
