--- a/app/src/main/res/drawable/shape_underline_dashed.xml
+++ b/app/src/main/res/drawable/shape_underline_dashed.xml
@@ -10,7 +10,7 @@
                 android:dashGap="5dp"
                 android:dashWidth="1dp"
                 android:width="1dp"
-                android:color="#7B8AA4"
+                android:color="@color/primary_text"
                 />
 
             <solid android:color="#00FFFFFF" />
