--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -1,10 +1,13 @@
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
-    android:padding="@dimen/padding_medium"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:maxLines="1"
+    android:layout_gravity="center"
+    android:layoutDirection="rtl"
+    android:paddingRight="@dimen/padding_spinner"
+    android:paddingLeft="@dimen/padding_spinner"
+    android:paddingBottom="@dimen/padding_bit"
+    android:paddingTop="@dimen/padding_bit"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="@dimen/font_small"
-    android:textColor="@color/primary_text"
-    android:background="@android:color/transparent"
-    android:ellipsize="marquee" />
+    android:textColor="@color/icons"
+    android:background="@color/primary_dark" />
